--- a/references.bib
+++ b/references.bib
@@ -111,3 +111,12 @@
   journal = {Commun. ACM},
   month = {jun},
   pages = {377–387}}
+
+@thesis{Hillis1985,
+  author = {Hillis, William Daniel},
+  title = {The Connection Machine},
+  year = {1985},
+  school = {Massachusetts Institute of Technology},
+  address = {Cambridge, MA, USA},
+  note = {Hillis, W.D.: The Connection Machine. PhD thesis, MIT (1985)},
+  url = {http://hdl.handle.net/1721.1/14719}}
