--- a/about.tex
+++ b/about.tex
@@ -1,5 +1,25 @@
 \chapter*{About this book}
 
+I intend to make this book forever free and open-source.
+You can find the source code at\\
+\linkwithqr{https://github.com/verri/dsp-book}
+
+% Bibtex of the book in the future
+
+\vfill
+If you like this book, consider \emph{buying me a coffee} at\\
+\linkwithqr{https://www.buymeacoffee.com/verri}
+
+\vfill
+If you find any typos, errors, or have any suggestions, please open an issue at\\
+\linkwithqr{https://github.com/verri/dsp-book/issues}
+
+\vfill
+Students can found a printable version of this book at\\
+\linkwithqr{https://comp.ita.br/\~verri/ds-book-print}
+(Use A4 paper, double-sided, short-edge spiral binding.)
+
+\newpage
 This book comprises the lectures notes of the course PO-235 Data Science Project.
 I hope someday it becomes an actual book. For now, beware many typos, grammar errors, ugly
 typesetting, disconnected material, etc.
