Added courses PDF.

--- a/courses.tex
+++ b/courses.tex
@@ -14,6 +14,8 @@ a specific assignment or grade, please use the private stream.
 
 Prof. Filipe A. N. Verri
 
+\paragraph{Important:} Only graduate students are allowed to take this course.
+
 \paragraph{Number of students:} Approx. 20
 
 \paragraph{Course load:} 3--0--0--4
@@ -91,12 +93,12 @@ Any required extra material will be made available in Google Classroom.
     \midrule
     Week & Topics \\
     \midrule
-    \multirow{2}{*}{1} & Brief history of data science (\cref{chap:history}) \\
-      & Peliminaries (\cref{chap:preliminaries})\\
+    \multirow{2}{*}{1} & Brief history of data science \pcref{chap:history} \\
+      & Peliminaries \pcref{chap:preliminaries} \\
     \midrule
     2 & \bfseries Written test \\
     \midrule
-    \multirow{2}{*}{3} & Fundamental data concepts (\cref{chap:data}) \\
+    \multirow{2}{*}{3} & Fundamental data concepts \pcref{chap:data} \\
       & Stages in a data science project \\
     \midrule
     4 & \multirow{2}{*}{Inductive learning and statistical learning theory} \\
