--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,10 @@
 \usepackage{booktabs}
 \usepackage{csquotes}
 \usepackage{multirow}
+
 \usepackage{cleveref}
+\newcommand\pcref[1]{(\cref{#1})}
+
 %\usepackage[Glenn]{fncychap}
 \usepackage{tikz}
 \usepackage{titling}
