Added some notes about the principles of our approach.

--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[twoside,a5paper,10pt,openright]{memoir}
 % \setstocksize{230mm}{160mm}
-\setlrmarginsandblock{3cm}{2cm}{*}
-\setulmarginsandblock{2cm}{2cm}{*}
+\setlrmarginsandblock{25mm}{20mm}{*}
+\setulmarginsandblock{20mm}{20mm}{*}
 \checkandfixthelayout
 
 \usepackage[utf8]{inputenc}
