--- a/inductive.tex
+++ b/inductive.tex
@@ -8,7 +8,7 @@
 Recommended reading: IEEE TRANSACTIONS ON NEURAL NETWORKS, VOL. 10, NO. 5, SEPTEMBER 1999
 An Overview of Statistical Learning Theory.
 
-\begin{figure}
+\begin{figurebox}[label=fig:learning]{The title of the figure goes here.\dots}
   \centering
   \begin{tikzpicture}
     \draw[outline] (0,0) circle (30mm) node {};
@@ -24,10 +24,11 @@ An Overview of Statistical Learning Theory.
     % \draw[outline] \verrics node {computer science};
     % \node[anchor=north,above] at (0,2) {data science};
   \end{tikzpicture}
-  \caption{
-    \dots
-  }
-\end{figure}
+  \tcblower
+  More information about the figure goes here.
+\end{figurebox}
+
+\Cref{fig:learning}:
 
 \emph{Artificial intelligence} is a very broad field.  For the sake of our scope, it is
 the field that studies algorithms that exhibit intelligent behavior.
