Yet better figures and tables.

--- a/data.tex
+++ b/data.tex
@@ -362,7 +362,8 @@ Ratio data are data that can be classified into categories, ordered, measured in
 units, and have a true zero.  In practice, they difer on the logical and arithmetic operations
 we can perform on them.
 
-\begin{center}
+\begin{tablebox}{Stevens’s types}
+  \centering
   \begin{tabular}{cc}
     \toprule
     \textbf{Data type} & \textbf{Operations} \\
@@ -373,7 +374,7 @@ we can perform on them.
     Ratio & $=, <, +, -, \times, \div$ \\
     \bottomrule
   \end{tabular}
-\end{center}
+\end{tablebox}
 
 However, Stevens’s types do not exhaust all possibilities for data types.  For example,
 probabilities are bounded at both ends, and thus do not tolerate arbitrary scale shifts.
