--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,11 @@
 \usepackage{csquotes}
 \usepackage{multirow}
 
+\usepackage[table]{xcolor}
+\let\oldtabular\tabular
+\let\endoldtabular\endtabular
+\renewenvironment{tabular}{\rowcolors{2}{black!10!white}{}\oldtabular}{\endoldtabular}
+
 \usepackage{cleveref}
 \newcommand\pcref[1]{(\cref{#1})}
 
@@ -83,6 +88,11 @@
 }
 
 \newtcolorbox[blend into=figures]{figurebox}[2][]{%
+  float=htbp, base={#2},
+  colframe=black!20!white,
+  every float=\centering, #1}
+
+\newtcolorbox[blend into=tables]{tablebox}[2][]{%
   float=htbp, base={#2},
   colframe=black!20!white,
   every float=\centering, #1}
