--- a/data.tex
+++ b/data.tex
@@ -364,6 +364,7 @@ we can perform on them.
 
 \begin{tablebox}{Stevens’s types}
   \centering
+  \rowcolors{2}{black!10!white}{}
   \begin{tabular}{cc}
     \toprule
     \textbf{Data type} & \textbf{Operations} \\
