--- a/courses.tex
+++ b/courses.tex
@@ -205,7 +205,7 @@ The first two books (Zumel and Mount, and Wickham and Grolemund) are available o
 \thispagestyle{empty}
 \paragraph{Recommended reading:}
 \begin{itemize}
-  \item In-progress textbook at \href{https://comp.ita.br/~verri/ds-book}{comp.ita.br/~verri/ds-book}.
+  \item In-progress textbook at \href{https://comp.ita.br/~verri/ds-book}{comp.ita.br/\textasciitilde{}verri/ds-book}.
   \item \fullcite{Vapnik1999}.
   \item \fullcite{Benavoli2017}.
 \end{itemize}
