--- a/references.bib
+++ b/references.bib
@@ -47,7 +47,7 @@
   number = {1},
   pages = {65-72},
   year = {1993},
-  publisher = {Taylor & Francis},
+  publisher = {Taylor \& Francis},
   doi = {10.1080/00031305.1993.10475938}}
 
 @article{Beaumont2013,
@@ -96,7 +96,6 @@
   author = {Codd, E. F.},
   title = {A Relational Model of Data for Large Shared Data Banks},
   year = {1970},
-  issue_date = {June 1970},
   publisher = {Association for Computing Machinery},
   address = {New York, NY, USA},
   volume = {13},
@@ -105,7 +104,6 @@
   doi = {10.1145/362384.362685},
   abstract = {Future users of large data banks must be protected from having to know how the data is organized in the machine (the internal representation). A prompting service which supplies such information is not a satisfactory solution. Activities of users at terminals and most application programs should remain unaffected when the internal representation of data is changed and even when some aspects of the external representation are changed. Changes in data representation will often be needed as a result of changes in query, update, and report traffic and natural growth in the types of stored information.Existing noninferential, formatted data systems provide users with tree-structured files or slightly more general network models of the data. In Section 1, inadequacies of these models are discussed. A model based on n-ary relations, a normal form for data base relations, and the concept of a universal data sublanguage are introduced. In Section 2, certain operations on relations (other than logical inference) are discussed and applied to the problems of redundancy and consistency in the user's model.},
   journal = {Commun. ACM},
-  month = {jun},
   pages = {377–387}}
 
 @thesis{Hillis1985,
