--- a/main.tex
+++ b/main.tex
@@ -40,6 +40,19 @@
   \end{minipage}
 }
 
+\newcommand{\aurl}{google.com}
+\newenvironment{parwithqr}[1]{%
+  \renewcommand\aurl{#1}%
+  \noindent%
+  \begin{minipage}{0.75\textwidth}%
+}{%
+  \end{minipage}%
+  \hfill%
+  \begin{minipage}{0.20\textwidth}%
+    \qrcode[height=\textwidth]{\aurl}%
+  \end{minipage}%
+}
+
 \nonfrenchspacing
 
 \begin{document}
@@ -111,7 +124,9 @@
   pdfsubject={Data science},
   pdfauthor={\theauthor},
   pdfkeywords={data science, statistics, machine learning, databases},
-  urlcolor=black!60}
+  urlcolor=black!60,
+  linkcolor=black,
+  citecolor=black,}
 
 \maketitle
 \thispagestyle{empty}
