--- a/about.tex
+++ b/about.tex
@@ -1,23 +1,30 @@
 \chapter*{About this book}
 
-I intend to make this book forever free and open-source.
-You can find the source code at\\
-\linkwithqr{https://github.com/verri/dsp-book}
-
-% Bibtex of the book in the future
-
-\vfill
-If you like this book, consider \emph{buying me a coffee} at\\
-\linkwithqr{https://www.buymeacoffee.com/verri}
+\begin{parwithqr}{https://github.com/verri/dsp-book}
+  I intend to make this book forever free and open-source. You can find (and contribute
+  to) the source code at \href{\aurl}{github.com/verri/dsp-book}.
+\end{parwithqr}
 
 \vfill
-If you find any typos, errors, or have any suggestions, please open an issue at\\
-\linkwithqr{https://github.com/verri/dsp-book/issues}
+
+\begin{parwithqr}{https://www.buymeacoffee.com/verri}
+  If you like this book, consider \emph{buying me a coffee} at
+  \href{\aurl}{buymeacoffee.com/verri}.
+\end{parwithqr}
 
 \vfill
-Students can found a printable version of this book at\\
-\linkwithqr{https://comp.ita.br/\~verri/ds-book-print}
-(Use A4 paper, double-sided, short-edge spiral binding.)
+
+\begin{parwithqr}{https://github.com/verri/dsp-book/issues}
+  If you find any typos, grammar errors, incomplete material or have any suggestions,
+  please open an issue at \href{\aurl}{github.com/verri/dsp-book/issues}.
+\end{parwithqr}
+
+\vfill
+
+\begin{parwithqr}{https://comp.ita.br/\~verri/ds-book-print}
+  Students can found a printable version (A4 paper, double-sided, short-edge spiral
+  binding) of this book at \href{\aurl}{comp.ita.br/\textasciitilde{}verri/ds-book-print}.
+\end{parwithqr}
 
 \newpage
 This book comprises the lectures notes of the course PO-235 Data Science Project.
