--- a/about.tex
+++ b/about.tex
@@ -9,7 +9,8 @@
 
 \begin{parwithqr}{https://www.buymeacoffee.com/verri}
   If you like this book, consider \emph{buying me a coffee} at
-  \href{\aurl}{buymeacoffee.com/verri}.
+  \href{\aurl}{buymeacoffee.com/verri}.   All donations will be used to improve this book,
+  including editing and proofreading.
 \end{parwithqr}
 
 \vfill
