--- a/history.tex
+++ b/history.tex
@@ -10,6 +10,11 @@ contextualization, I separate the topic in two approaches: the history of the te
 and a broad timeline of data-driven sciences highlighting the important figures in each
 age.
 
+I believe that the history of the term is important to understand the context of the
+discipline.  Also, studying the main facts and figures in the history of data-driven
+sciences is important to understand the evolution of the field and hopefully to guide us
+to evolve it further.
+
 \begin{mainbox}{Chapter remarks}
   \boxsubtitle{Context}
 
