--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
-\usepackage[style=authoryear]{biblatex}
+\usepackage[style=authoryear,maxbibnames=99,giveninits=true]{biblatex}
 \addbibresource{references.bib}
 
 \usepackage{amsmath}
