--- a/references.bib
+++ b/references.bib
@@ -10,7 +10,7 @@
 }
 
 @ARTICLE{Vapnik1999,
-  author={Vapnik, V.N.},
+  author={Vapnik, Vladimir Naumovich},
   journal={IEEE Transactions on Neural Networks},
   title={An overview of statistical learning theory},
   year={1999},
@@ -114,3 +114,10 @@
   address = {Cambridge, MA, USA},
   note = {Hillis, W.D.: The Connection Machine. PhD thesis, MIT (1985)},
   url = {http://hdl.handle.net/1721.1/14719}}
+
+@book{Vapnik1995,
+  author = {Vapnik, Vladimir Naumovich},
+  isbn = {0-387-94559-8},
+  publisher = {Springer-Verlag New York, Inc.},
+  title = {The nature of statistical learning theory},
+  year = 1995}
